# Medical-Chatbot-Doan

./: .gitignore  README.md  pyproject.toml  run.sh
app/: main_api.py
app/api/v1/: router.py
app/database/embedding_db/: image_database copy.db
app/database/history_dialogs/: chat_history.db
app/frontend/: main_app.py
app/prompts/: prompts.md
app/services/: call_llm.py  database_interaction.py  embedding_search.py  keyword_search.py  kg_search.py  read_md_file.py
app/utils/: logger.py
